<resources>
    <string name="app_name">MovieTV Catalogue</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_tvshows">TV Shows</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_release_date">Release Date</string>

    <string name="title_movies">Movie\'s Title</string>
    <string name="title_tvshows">TV Show\'s Title</string>
    <string name="release_date_movies">Movie\'s Release Date</string>
    <string name="release_date_tvshows">TV Show\'s Release Date</string>
    <string name="overview_movies">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="overview_tvshows">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>

    <string name="movie_poster">Movie Poster</string>
    <string name="tvshow_poster">TV Show Poster</string>

    <string-array name="movie_title">
        <item>The Lion King</item>
        <item>One Piece: Stampede</item>
        <item>The Angry Birds Movie 2</item>
        <item>Ni No Kuni</item>
        <item>It: Chapter Two</item>
        <item>Ip Man 4</item>
        <item>Frozen II</item>
        <item>Jumanji: The Next Level</item>
        <item>Star Wars: The Rise of Skywalker</item>
        <item>Spies in Disguise</item>
    </string-array>

    <string-array name="movie_release_date">
        <item>July 19, 2019</item>
        <item>August 9, 2019</item>
        <item>August 14, 2019</item>
        <item>August 23, 2019</item>
        <item>September 6, 2019</item>
        <item>October 18, 2019</item>
        <item>November 22, 2019</item>
        <item>December 13, 2019</item>
        <item>December 20, 2019</item>
        <item>December 25, 2019</item>
    </string-array>

    <string-array name="movie_description">
        <item>Simba idolises his father, King Mufasa, and takes to heart his own royal destiny. But not everyone in the kingdom celebrates the new cub\'s arrival. Scar, Mufasa\'s brother—and former heir to the throne—has plans of his own. </item>
        <item>The film celebrates the One Piece anime\'s 20th anniversary and will be the 14th film in the franchise. </item>
        <item>The flightless birds and scheming green pigs take their beef to the next level. </item>
        <item>High schooler Yuu and his friend Haru get involved in a case involving his childhood friend Kotona, which forces them to go back and forth between another world that is different but is somewhat similar to their world, Ni no Kuni. </item>
        <item>27 years after overcoming the malevolent supernatural entity Pennywise, the former members of the Losers\' Club, who have grown up and moved away from Derry, are brought back together by a devastating phone call. </item>
        <item>Ip Man 4 is an upcoming Hong Kong biographical martial arts film directed by Wilson Yip and produced by Raymond Wong. It is the fourth in the Ip Man film series based on the life of the Wing Chun grandmaster of the same name and features Donnie Yen reprising the role. </item>
        <item>Elsa, Anna, Kristoff and Olaf are going far in the forest to know the truth about an ancient mystery of their kingdom. </item>
        <item>Spencer returns to the world of Jumanji, prompting his friends, his grandfather and his friend to enter a different and more dangerous version to save him. </item>
        <item>The next installment in the franchise and the conclusion of the “Star Wars“ sequel trilogy as well as the “Skywalker Saga“. </item>
        <item>Lance and Walter. One is a super cool and charming spy, and the other invents the super cool gadgets Lance uses. When an event happens, they must learn to rely on each other like never before in order to save the world. </item>
    </string-array>

    <array name="movie_photo">
        <item>@drawable/the_lion_king</item>
        <item>@drawable/one_piece_stampede</item>
        <item>@drawable/the_angry_birds_movie_2</item>
        <item>@drawable/ni_no_kuni</item>
        <item>@drawable/it_chapter_two</item>
        <item>@drawable/ip_man_4</item>
        <item>@drawable/frozen_ii</item>
        <item>@drawable/jumanji_to_the_next_level</item>
        <item>@drawable/star_wars_the_rise_of_skywalker</item>
        <item>@drawable/spies_in_disguise</item>
    </array>

    <string-array name="tvshow_title">
        <item>Game of Thrones</item>
        <item>Arrow</item>
        <item>Stranger Things</item>
        <item>Family Guy</item>
        <item>The Simpsons</item>
        <item>The Flash</item>
        <item>Marvel\'s Agents of S.H.I.E.L.D.</item>
        <item>South Park</item>
        <item>Supergirl</item>
        <item>Doctor Who</item>
    </string-array>

    <string-array name="tvshow_release_date">
        <item>April 17, 2011</item>
        <item>October 10, 2012</item>
        <item>July 15, 2016</item>
        <item>January 31, 1999</item>
        <item>December 17, 1989</item>
        <item>October 7, 2014</item>
        <item>September 24, 2013</item>
        <item>August 13, 1997</item>
        <item>October 26, 2015</item>
        <item>March 26, 2005</item>
    </string-array>

    <string-array name="tvshow_description">
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond. </item>
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow. </item>
        <item>When a young boy vanishes, a small town uncovers a mystery involving secret experiments, terrifying supernatural forces, and one strange little girl. </item>
        <item>Sick, twisted, politically incorrect and Freakin\' Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie, Meg and Chris. </item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family. Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. </item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. </item>
        <item>Agent Phil Coulson of S.H.I.E.L.D. (Strategic Homeland Intervention, Enforcement and Logistics Division) puts together a team of agents to investigate the new, the strange and the unknown around the globe, protecting the ordinary from the extraordinary. </item>
        <item>Follows the misadventures of four irreverent grade-schoolers in the quiet, dysfunctional town of South Park, Colorado. </item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism. </item>
        <item>The Doctor is a Time Lord: a 900 year old alien with 2 hearts, part of a gifted civilization who mastered time travel. The Doctor saves planets for a living, more of a hobby actually, and the Doctor\'s very, very good at it. </item>
    </string-array>

    <array name="tvshow_photo">
        <item>@drawable/game_of_thrones</item>
        <item>@drawable/arrow</item>
        <item>@drawable/stranger_things</item>
        <item>@drawable/family_guy</item>
        <item>@drawable/the_simpsons</item>
        <item>@drawable/the_flash</item>
        <item>@drawable/shield</item>
        <item>@drawable/south_park</item>
        <item>@drawable/supergirl</item>
        <item>@drawable/doctor_who</item>
    </array>

    <string name="change_language_settings">Change Language Settings</string>

</resources>
