<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_tvshow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="12dp"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout">

        <ImageView
            android:id="@+id/img_tivi_photo"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/tvshow_poster" />

        <TextView
            android:id="@+id/txt_tivi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_tivi_photo"
            android:text="@string/title_tvshows"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tivi_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tivi_title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_tivi_photo"
            android:text="@string/release_date_tvshows"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_tivi_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tivi_release_date"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_tivi_photo"
            android:background="@drawable/custom_background"
            android:ellipsize="end"
            android:maxLines="5"
            android:padding="5dp"
            android:text="@string/overview_tvshows"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>